[gd_scene load_steps=29 format=2]

[ext_resource path="res://Menu/Start.png" type="Texture" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]
[ext_resource path="res://Menu/Gallery.png" type="Texture" id=3]
[ext_resource path="res://Menu/Quit.png" type="Texture" id=4]
[ext_resource path="res://Menu/Sprites menu/quadro0001.png" type="Texture" id=5]
[ext_resource path="res://Menu/Sprites menu/quadro0014.png" type="Texture" id=6]
[ext_resource path="res://Menu/Sprites menu/quadro0015.png" type="Texture" id=7]
[ext_resource path="res://Menu/Sprites menu/quadro0016.png" type="Texture" id=8]
[ext_resource path="res://Menu/Sprites menu/quadro0017.png" type="Texture" id=9]
[ext_resource path="res://Menu/Sprites menu/quadro0005.png" type="Texture" id=10]
[ext_resource path="res://Menu/Sprites menu/quadro0010.png" type="Texture" id=11]
[ext_resource path="res://Menu/Sprites menu/quadro0021.png" type="Texture" id=12]
[ext_resource path="res://Menu/Sprites menu/quadro0004.png" type="Texture" id=13]
[ext_resource path="res://Menu/Sprites menu/quadro0011.png" type="Texture" id=14]
[ext_resource path="res://Menu/Sprites menu/quadro0007.png" type="Texture" id=15]
[ext_resource path="res://Menu/Sprites menu/quadro0013.png" type="Texture" id=16]
[ext_resource path="res://Menu/Sprites menu/quadro0019.png" type="Texture" id=17]
[ext_resource path="res://Menu/Sprites menu/quadro0003.png" type="Texture" id=18]
[ext_resource path="res://Menu/Sprites menu/quadro0006.png" type="Texture" id=19]
[ext_resource path="res://Menu/Sprites menu/quadro0018.png" type="Texture" id=20]
[ext_resource path="res://Menu/Sprites menu/quadro0000.png" type="Texture" id=21]
[ext_resource path="res://Menu/Sprites menu/quadro0008.png" type="Texture" id=22]
[ext_resource path="res://Menu/Sprites menu/quadro0012.png" type="Texture" id=23]
[ext_resource path="res://Menu/Sprites menu/quadro0002.png" type="Texture" id=24]
[ext_resource path="res://Menu/Sprites menu/quadro0020.png" type="Texture" id=25]
[ext_resource path="res://Menu/Sprites menu/quadro0009.png" type="Texture" id=26]
[ext_resource path="res://Logo_OOT.png" type="Texture" id=27]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 21 ), ExtResource( 5 ), ExtResource( 24 ), ExtResource( 18 ), ExtResource( 13 ), ExtResource( 10 ), ExtResource( 19 ), ExtResource( 15 ), ExtResource( 22 ), ExtResource( 26 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 23 ), ExtResource( 16 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 20 ), ExtResource( 17 ), ExtResource( 25 ), ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = 1.0
margin_bottom = 1.0
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 960, 536 )
scale = Vector2( 6.75, 6.7375 )
frames = SubResource( 1 )
frame = 2
playing = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.301
anchor_top = 0.342
anchor_right = 0.623
anchor_bottom = 0.67
margin_left = 276.08
margin_top = 66.64
margin_right = -224.16
margin_bottom = -83.6
rect_scale = Vector2( 2.26931, 2.29445 )
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
custom_constants/separation = 42

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 118.0
margin_bottom = 40.0
rect_min_size = Vector2( 118, 40 )
shortcut_in_tooltip = false
action_mode = 0
flat = true
icon_align = 1

[node name="Sprite" type="Sprite" parent="VBoxContainer/StartButton"]
position = Vector2( 52.8795, 22.0484 )
scale = Vector2( 1.86551, 1.95278 )
texture = ExtResource( 1 )

[node name="GalleryButton" type="Button" parent="VBoxContainer"]
margin_top = 82.0
margin_right = 118.0
margin_bottom = 122.0
rect_min_size = Vector2( 0, 40 )
flat = true

[node name="Sprite" type="Sprite" parent="VBoxContainer/GalleryButton"]
position = Vector2( 56.8455, 19.5518 )
scale = Vector2( 1.71344, 1.90678 )
texture = ExtResource( 3 )

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 164.0
margin_right = 118.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 40 )
flat = true

[node name="Sprite" type="Sprite" parent="VBoxContainer/QuitButton"]
position = Vector2( 52.8795, 18.7745 )
scale = Vector2( 1.75126, 1.89224 )
texture = ExtResource( 4 )

[node name="LogoOot" type="Sprite" parent="."]
position = Vector2( 935, 216 )
scale = Vector2( 4.039, 4.299 )
texture = ExtResource( 27 )

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="start_pressed"]
[connection signal="pressed" from="VBoxContainer/GalleryButton" to="." method="_on_GalleryButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
